Added <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine> to surefire-plugin and failsafe-plugin configurations.